<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>mavros_bridge</name>
	<version>0.1.0</version>
	<description>Interface with ros2 mavros px4</description>
	<maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>
	<url type="repository"></url>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
  	<depend>rclcpp_components</depend>
  	<depend>sensor_msgs</depend>
  	<depend>tf2_geometry_msgs</depend>
 	<depend>tf2_ros</depend>
  	<depend>tf2_msgs</depend>
  	<depend>geometry_msgs</depend>
  	<depend>nav_msgs</depend>
	<depend>mav_msgs</depend>
	<depend>mavros</depend>
  	<depend>mavros_extras</depend>
  	<depend>mavros_msgs</depend>
	<depend>xacro</depend>
	<depend>robot_state_publisher</depend>
	<depend>joint_state_publisher</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
